Clean up entity code